--- a/2023.02.26.md
+++ b/2023.02.26.md
@@ -1,5 +1,1 @@
-In the recent period, lineages have increased a lot, among which XBB.1.5 has increased its share crazily. ✓
-At present, there are more than 200 strains to be named in the sub-branch of XBB.1.5, while in the branch of XBB.1.5.2, XBB.1.5.3 has more shares. 
-In recent days,XBB.1.5.1. In XBB.1.5, it is preliminarily estimated that at least 60 branches are worthy of being assigned lineages. 
-In addition, many branches in XBB.1.5 have descendants who can be assigned lineages.
- In addition to XBB.1.5, XBB.1.9.1 and XBB.1.9.2 have also developed rapidly, and XBB.1.9.2 has been assigned lineages. In fact, XBB.
+For some time now, XBB.1.5 has been occupying a very high percentage.
