--- a/2023.02.26.md
+++ b/2023.02.26.md
@@ -1,1 +1,3 @@
 For some time now, XBB.1.5 has been occupying a very high percentage.
+Of the many sub-branches of XBB.1.5, XBB.1.5.3 and XBB.1.5.2 maintain a high share, with XBB.1.5.2 declining slightly in recent times and XBB.1.5.1 steadily increasing in share.
+
