--- a/2023.02.26.md
+++ b/2023.02.26.md
@@ -1,4 +1,4 @@
 For some time now, XBB.1.5 has been occupying a very high percentage.
 Of the many sub-branches of XBB.1.5, XBB.1.5.3 and XBB.1.5.2 maintain a high share, with XBB.1.5.2 declining slightly in recent times and XBB.1.5.1 steadily increasing in share.
-At present, XBB.1.5.4, XBB.1.5.6, EM.1, XBB.1.5.10, XBB.1.5.12, EK.1, EK.2, EL.1 are all considered as possible pedigrees for development, and although there is no data to support them yet, they are still much in demand
+At present, XBB.1.5.4, XBB.1.5.6, EM.1, XBB.1.5.10, XBB.1.5.12, EK.1, EK.2, EL.1 are all considered to be promising strains for development, although there are no data to support them yet.
 
