--- a/2023.02.26.md
+++ b/2023.02.26.md
@@ -2,4 +2,5 @@ For some time now, XBB.1.5 has been occupying a very high percentage.
 Of the many sub-branches of XBB.1.5, XBB.1.5.3 and XBB.1.5.2 maintain a high share, with XBB.1.5.2 declining slightly in recent times and XBB.1.5.1 steadily increasing in share.
 At present, XBB.1.5.4, XBB.1.5.6, EM.1, XBB.1.5.10, XBB.1.5.12, EK.1, EK.2, EL.1 are all considered to be promising strains for development, although there are no data to support them yet.
 There are currently more than 200 subbranches awaiting designation in XBB.1.5, and preliminary estimates from the current data suggest that at least 60 branches can now be designated, and it is imperative that those subbranches that have been observed for a long time and have been sequenced in high numbers be designated first, and that some of the current designated or undesignated pedigrees also appear to be worthy of new genealogical assignment.
+The XBB.1.9.1 and XBB.1.9.2 strains, which are similar to XBB.1.5, also appear to be developing rapidly, with subbranches of XBB.1.9.2 also assigned to the EG.1 spectrum, and EG.1 has acquired a striking mutation which should require attention, in addition to the greater developmental advantage of XBB.1.9.1, some of which should also require being designated.
 
