--- a/2023.02.26.md
+++ b/2023.02.26.md
@@ -4,5 +4,5 @@ At present, XBB.1.5.4, XBB.1.5.6, EM.1, XBB.1.5.10, XBB.1.5.12, EK.1, EK.2, EL.1
 There are currently more than 200 subbranches awaiting designation in XBB.1.5, and preliminary estimates from the current data suggest that at least 60 branches can now be designated, and it is imperative that those subbranches that have been observed for a long time and have been sequenced in high numbers be designated first, and that some of the current designated or undesignated pedigrees also appear to be worthy of new genealogical assignment.
 The XBB.1.9.1 and XBB.1.9.2 strains, which are similar to XBB.1.5, also appear to be developing rapidly, with subbranches of XBB.1.9.2 also assigned to the EG.1 spectrum, and EG.1 has acquired a striking mutation which should require attention.In addition to the greater developmental advantage of XBB.1.9.1, some of which should also require being designated.
 The general trend in the BQ.1 and BQ.1.1 families is declining, with the BQ.1.1 family showing a gradual downward trend, but there are still some branches in their sub-branches that may have the potential to continue to increase, with the following lines being broadly favoured, BQ.1.28, BQ.1.1.32, BQ.1.1.41, in addition to some of the branches evolving out of the BQ.1.1 designation Branches.
-The CH.1.1 strain has been hit by strains on the XBB.1.5 spectrum and is on the decline, but this does not mean that the threat has been lifted, and there is still potential for growth in CH.1.1.1 and its sub-branches of the DV series, one of which has acquired S:S486P, which is of course relatively poorly sequenced at present, but this strain may start to grow at some point CH.1.1.4 had a mutation earlier and the vast majority of pedigrees carry him, so for this reason this strain cannot be designated for the time being. ch.3.1 has not been found again in recent times, or is rarely found, but it does not seem to be possible to declare it as having disappeared, the possibility that CH.3.1 may be spreading insidiously cannot be ruled out at this time, and the last few countries where CH.3.1 has been sequenced so far need to step up sequencing, as well as searching for possible natural hosts in nature.
+The CH.1.1 strain has been hit by strains on the XBB.1.5 spectrum and is on the decline, but this does not mean that the threat has been lifted, and there is still potential for growth in CH.1.1.1 and its sub-branches of the DV series, one of which has acquired S:S486P, which is of course relatively poorly sequenced at present, but this strain may start to grow at some point CH.1.1.4 had a mutation earlier and the vast majority of pedigrees carry him, so for this reason this strain cannot be designated for the time being. CH.3.1 has not been found again in recent times, or is rarely found, but it does not seem to be possible to declare it as having disappeared, the possibility that CH.3.1 may be spreading insidiously cannot be ruled out at this time, and the last few countries where CH.3.1 has been sequenced so far need to step up sequencing, as well as searching for possible natural hosts in nature.
 
