--- a/2023.03.14.md
+++ b/2023.03.14.md
@@ -1,9 +1,9 @@
-The XBB.1.5 family XBB.1.5.1, XBB.1.5.13, XBB.1.5.11 and XBB.1.5.14 seem to be the potential players of the XBB.1.5 family at this stage。
+The XBB.1.5 family XBB.1.5.1, XBB.1.5.7，XBB.1.5.13, XBB.1.5.11 and XBB.1.5.14 seem to be the potential players of the XBB.1.5 family at this stage。
 Some branches in XBB.1.5.1 seem to be worth specifying.
 XBB.1.9.1 and XBB.1.9.2 are growing rapidly, in addition to XBB.1.11.1.
 CH.1.1.1 and CH.1.1.11, DV.1, DV.3 in CH.1.1 appear to have a high growth potential。
 New potential strains, designated in recent times CH.1.1.15, BQ.1.1.71, XBB.1.16 appear to be a new generation of strains with growth advantages, in addition to a number of as yet unspecified pedigrees that also have some growth potential, including one in particular, which does not show the potential to outperform some strains in terms of sequencing numbers, but this strain appears to be There is some prevalence in Africa, and given the relatively low number of sequences in Africa, there is reason to believe that this is a very promising strain
-
+Some other strains of concern, XBK.1, EF.1.1.1, BQ.1.1.32, BQ.1.1.41, DT.2, EF.1.1
 
 
 
