--- a/2023.03.26.md
+++ b/2023.03.26.md
@@ -1,3 +1,6 @@
 XBB.1.5, XBB.1.9.1, XBB.1.9.2, XBB.1.16 and XBB.2.3, XBB.2.3.2, XBB.1.11.1, XBL are all on the rise and are not mentioned in this repository on these occasions as the rise in the number of XBL has been predicted in advance by some information. growth potential in XBB.1.5 The first tier is XBB.1.5.13, XBB.1.5.17, XBB.1.5.21, the second tier is XBB.1.5.11, XBB.1.5.16, XBB.1.5.19, the third tier is XBB.1.5.4, XBB.1.5.1. 
 
 In the sub-branches of XBB.1.5, some of the sub-strains that were higher in the previous rankings began to fall in rank and the newly designated strains began to increase.
+
+
+In addition to this, there seems to be a more interesting pedigree in BA.5.3.5 which carries two excellent mutations, and two special mutations which I think also seem to be excellent, in addition to this pedigree also carrying mutations in Orf1a as well as Orf1b, which seem to be the dominant mutation in many pedigrees at the moment, and with mutations in these two regions seem to be in recently shown many advantages.
