--- a/2023.04.06.md
+++ b/2023.04.06.md
@@ -1,1 +1,2 @@
 Three new pedigrees of interest, XBB.2.3.3, XBB.2.3.4,FN.1
+The recent strains XBB.2.3.2 as well as XBB.1.16, XBB.1.9.1, XBB.1.9.2, XBB.1.5 are still exploding with great growth potential. Following last week's approach, we are still analysing the sub-branches of XBB.1.5, using a stepwise approach.
