--- a/2023.04.06.md
+++ b/2023.04.06.md
@@ -2,3 +2,4 @@ Three new pedigrees of interest, XBB.2.3.3, XBB.2.3.4,FN.1
 The recent strains XBB.2.3.2 as well as XBB.1.16, XBB.1.9.1, XBB.1.9.2, XBB.1.5 are still exploding with great growth potential. Following last week's approach, we are still analysing the sub-branches of XBB.1.5, using a stepwise approach.
 The first step consists of XBB.1.5.1, XBB.1.5.15, XBB.1.5.5, XBB.1.5.13, XBB.1.5.17, XBB.1.5.20, XBB.1.5.21, XBB.1.5.11 strains.
 XBB.1.5.19,XBB.1.5.4,XBB.1.5.16,XBB.1.5.19,XBB.1.5.2,XBB.1.5.7 are the main strains of the second tier.
+In addition, some of the strains considered by some countries as BA.2.75 may be unspecified recombinant strains, or evolved sub-strains, or may be sub-branches of XBB and unspecified sub-branches of strains such as XBL
