--- a/2023.04.06.md
+++ b/2023.04.06.md
@@ -4,3 +4,4 @@ The first step consists of XBB.1.5.1, XBB.1.5.15, XBB.1.5.5, XBB.1.5.13, XBB.1.5
 XBB.1.5.19,XBB.1.5.4,XBB.1.5.16,XBB.1.5.19,XBB.1.5.2,XBB.1.5.7 are the main strains of the second tier.
 In addition, some of the strains considered by some countries as BA.2.75 may be unspecified recombinant strains, or evolved sub-strains, or may be sub-branches of XBB and unspecified sub-branches of strains such as XBL
 The EG and FL lineages previously assigned from XBB.1.9.1 or XBB.1.9.2 seem to have some worthy designations, and even both lineages have produced some worthy siblings, in addition to XBB.1.9.1 and XBB.1.9.2, which also have some siblings worthy of designating their daughter strains
+CH.1.1.1 and DV.1 have become the new phase of the CH.1.1 strains to be monitored, some mutations have been acquired in these two strains and some of the strains with the new mutations seem to be newly designated
